--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="assets/flowbite/flowbite.min.js"></script>
+  <!-- <script src="assets/flowbite/flowbite.min.js"></script> -->
 </body>
 </html>
